hermes_fuzz_executed/fuzz_52_execution
'use strict';
var f = "test";
f.toUpperCase();  
```

<sup>**Note:** If you use the "experimental" compiler options (`-O3`, `-g`) when you build a native project, you will also get compatibility with C++ or Objective-C code, which is in a separate effort to be completed. You can ignore this warning.<sup>

## How to setup React Native to use Hermes

Hermes uses a binary compiled from RN's JS library (React Native JS binary), which is built from the generated native code via `react-native run-android`.

You can configure the RN JS library for a binary compiled from a specific RN release (for example, `0.60.x`), or a specific version (for example `-android-16-0`).

You can use [Xcode](https: 

To do this, select a release in Project Navigator. It will look like this:

![xcode-select release](../assets/build-select-release.png)

Then click on any tab besides Build Settings and select the binary build settings. In this example, it will look like this:

![xcode-select native](../assets/build-select-native.png)

## Release Notes



Execution Output ------------------:
test.js:10:129: error: ';' expected
Hermes uses a binary compiled from RN's JS library (React Native JS binary), which is built from the generated native code via `react-native run-android`.
                                                                                                                                ^
